2010-10-18  Werner Koch  <wk@g10code.com>

	* rndw32.c (registry_poll): Disable performace fata gathering if
	GNUPG_RNDW32_NOPERF has been set.

2010-04-27  Marcus Brinkmann  <marcus@g10code.de>

	* rndw32ce.c (fillup_buffer): Rewrite without using nested
	functions, which are broken on arm/cegcc.

2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)

	Spelling fixes.

2010-03-24  Werner Koch  <wk@g10code.com>

	* rndw32.c: Revert all changes from 2010-01-21.

	* rndw32ce.c: New.
	* Makefile.am (EXTRA_librandom_la_SOURCES): Add it.
	* random-csprng.c (getfnc_gather_random)
	(getfnc_fast_random_poll) [USE_RNDW32CE]: Use rndw32ce.

2010-01-21  Werner Koch  <wk@g10code.com>

	* rndw32.c (read_mbm_data) [W32CE]: Do not build.
	(slow_gatherer) [W32CE]: Do not call read_mbm_data.
	(_gcry_rndw32_gather_random_fast) [W32CE]: Exclude some calls.
	(_gcry_rndw32_gather_random): Adjust version test for WindowsCE.

2009-12-10  Werner Koch  <wk@g10code.com>

	* rndw32.c (system_is_w2000): New.
	(_gcry_rndw32_gather_random): Set it.
	(slow_gatherer): Ignore SystemObjectInformation on W2000.  Fixes
	bug#1167.

2009-07-09  Werner Koch  <wk@g10code.com>

	* rndlinux.c (_gcry_rndlinux_gather_random): Print real values for
	the progess function and call it before blocking.  Suggested by
	Christian Grothoff.
	* rndunix.c (slow_poll): Add similar, but not yet functional, code.

2009-07-02  Werner Koch  <wk@g10code.com>

	* rndhw.c (poll_padlock): Asm change from Fedora.

2009-01-22  Werner Koch  <wk@g10code.com>

	* random.c (_gcry_random_deinit_external_test): Do not return a
	value.  Reported Albert Chin.

2008-09-16  Werner Koch  <wk@g10code.com>

	* random-fips.c (x931_aes_driver): No re-seeding with test contexts.
	(_gcry_rngfips_init_external_test): Fix setting of test_dt_ptr.
	(struct rng_context): Add flag TEST_NO_DUP_CHECK.
	(x931_aes_driver): Use that flag.
	(_gcry_rngfips_init_external_test): Add arg FLAGS and use it to
	modify the test.