@@ -1,3 +1,8 @@
+2011-09-08  Werner Koch  <wk@g10code.com>
+
+	* rndlinux.c (_gcry_rndlinux_gather_random): Don't use select if
+	the fd number is too high.  Reported by Jakub Bogusz.
+
 2010-10-18  Werner Koch  <wk@g10code.com>
 
 	* rndw32.c (registry_poll): Disable performace fata gathering if
